[tool.poetry]
name = "kyr"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Pajor <arkadiusz.pajor97@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.28.2"
sqlalchemy = "^2.0.4"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
